deployments/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-clamav-mirror-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.178.209.113/32,3.8.51.207/32,35.177.252.54/32,18.169.147.172/32,35.176.93.186/32,18.130.148.126/32,35.176.148.126/32,51.149.250.0/24,51.149.249.0/29,194.33.249.0/29,51.149.249.32/29,194.33.248.0/29,20.49.214.199/32,20.49.214.228/32,20.26.11.71/32,20.26.11.108/32,194.33.200.0/21,194.33.216.0/23,194.33.218.0/24,128.77.75.64/26
    external-dns.alpha.kubernetes.io/set-identifier: laa-clamav-mirror-ingress-${KUBE_NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: laa-clamav-mirror-service # this should match the metadata.name in service.yml
                port:
                  number: 80
